--- a/config/models.yaml
+++ b/config/models.yaml
@@ -71,6 +71,7 @@ models:
       - completion
       - vision
       - analysis
+      - workspace
   - name: compatible
     architecture: compatible
     provider: compatible
@@ -79,6 +80,7 @@ models:
       - conversation
       - analysis
       - thought
+      - workspace
   - name: nvidia/Llama-3.1-Nemotron-70B-Instruct-HF
     architecture: llama3.1
     provider: featherless
@@ -86,6 +88,7 @@ models:
     category:
       - conversation
       - analysis
+      - workspace
   - name: maldv/Qwentile2.5-32B-Instruct
     architecture: qwen2.5
     provider: featherless
@@ -94,6 +97,8 @@ models:
       - conversation
       - thought
       - analysis
+      - functions
+      - workspace
   - name: deepseek-ai/DeepSeek-R1
     architecture: deepseekv3
     provider: featherless
@@ -102,6 +107,17 @@ models:
       - conversation
       - thought
       - analysis
+      - functions
+      - workspace
+  - name: nvidia/AceInstruct-72B
+    architecture: qwen2.5
+    provider: featherless
+    size: 72B
+    category:
+      - conversation
+      - analysis
+      - thought
+      - workspace
   - name: deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
     architecture: qwen2.5
     provider: featherless
@@ -109,6 +125,7 @@ models:
     category:
       - conversation
       - thought
+      - workspace
   - name: NovaSky-AI/Sky-T1-32B-Preview
     architecture: qwen2.5
     provider: featherless
@@ -124,12 +141,15 @@ models:
       - conversation
       - thought
       - analysis
+      - functions
+      - workspace
   - name: Sao10K/72B-Qwen2.5-Kunou-v1
     architecture: qwen2.5
     provider: featherless
     size: 72B
     category:
       - conversation
+      - workspace
   - name: Sao10K/L3.3-70B-Euryale-v2.3
     architecture: llama3.3
     provider: featherless
@@ -149,12 +169,24 @@ models:
     size: 70B
     category:
       - conversation
+  - name: xwen-team/Xwen-72B-Chat
+    architecture: qwen2.5
+    provider: featherless
+    size: 72B
+    category:
+      - conversation
   - name: Nexusflow/Athene-V2-Chat
     architecture: llama3.3
     provider: featherless
     size: 70B
     category:
       - conversation
+  - name: Nexusflow/Athene-V2-Agent
+    architecture: llama3.3
+    provider: featherless
+    size: 70B
+    category:
+      - functions
   - name: OpenBuddy/openbuddy-llama3.3-70b-v24.1-131k
     architecture: llama3.3
     provider: featherless
@@ -180,6 +212,26 @@ models:
     category:
       - thought
       - functions
+      - workspace
+  - name: mistralai/Mistral-Small-24B-Instruct-2501
+    architecture: mistral
+    provider: featherless
+    size: 24B
+    category:
+      - functions
+      - conversation
+      - analysis
+      - thought
+      - workspace
+  - name: mistralai/Mistral-Small-24B-Base-2501
+    architecture: mistral
+    provider: featherless
+    size: 24B
+    category:
+      - functions
+      - conversation
+      - analysis
+      - workspace
   - name: empower-dev/llama3-empower-functions-large-v1.1
     architecture: llama3.3
     provider: featherless
@@ -201,6 +253,7 @@ models:
       - analysis
       - thought
       - functions
+      - workspace
   - name: gpt-4-vision-preview
     architecture: gpt4
     provider: openai
@@ -215,6 +268,7 @@ models:
       - conversation
       - analysis
       - thought
+      - workspace
   - name: gpt-3.5-turbo
     architecture: gpt3.5
     provider: openai
@@ -239,6 +293,7 @@ models:
       - analysis
       - thought
       - functions
+      - workspace
   - name: claude-3-5-haiku
     architecture: claude3
     provider: anthropic
@@ -255,6 +310,7 @@ models:
       - conversation
       - thought
       - analysis
+      - workspace
   - name: gemini-1.5-flash
     architecture: gemini
     provider: google
@@ -263,6 +319,7 @@ models:
       - conversation
       - analysis
       - thought
+      - workspace
   - name: gemini-1.5-pro
     architecture: gemini
     provider: google
@@ -271,3 +328,4 @@ models:
       - conversation
       - analysis
       - thought
+      - workspace
