--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ tantivy = "^0.22.0"
 faiss-cpu = "^1.9.0.post1"
 pydantic = "^2.10.6"
 pyyaml = "^6.0.2"
+psutil = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core"]
