--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,22 @@ LOCAL_MODEL_URL=http://10.100.0.57:5000/v1
 DISCORD_APP_ID=
 DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
+
+# Redis configuration for caching
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+REDIS_NAMESPACE=aim:cache:
+REDIS_CACHE_EXPIRY=604800
+
+# Summarizer configuration
+SUMMARIZER_MODEL=deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
+SUMMARIZER_USE_GPU=false
+SUMMARIZER_NUM_GENERATIONS=2
+SUMMARIZER_NUM_BEAMS=3
+SUMMARIZER_TEMPERATURE=0.7
+
+# History management strategy
+# Options: sparsify, random_removal, ai_summarize
+HISTORY_MANAGEMENT_STRATEGY=sparsify
