--- a/config/tools/file.yaml
+++ b/config/tools/file.yaml
@@ -14,8 +14,8 @@ functions:
           default: utf-8
       required: [path]
       examples:
-        - {file_read: {path: /path/to/file.txt}}
-        - {file_read: {path: data.json, encoding: utf-8}}
+        - {file_read: {path: "/path/to/file.txt"}}
+        - {file_read: {path: "data.json", encoding: "utf-8"}}
 
   - name: file_write
     description: Write content to a file
@@ -34,8 +34,8 @@ functions:
           default: utf-8
       required: [path, content]
       examples:
-        - {file_write: {path: output.txt, content: Hello, World!}}
-        - {file_write: {path: data.json, content: {"key": "value"}, encoding: utf-8}}
+        - {file_write: {path: "output.txt", content: "Hello, World!"}}
+        - {file_write: {path: "data.json", content: "{\"key\": \"value\"}", encoding: "utf-8"}}
 
   - name: file_list
     description: List contents of a directory
@@ -52,6 +52,35 @@ functions:
       examples:
         - {file_list: {path: "/path/to/dir"}}
         - {file_list: {path: ".", pattern: "*.py"}}
+
+  - name: file_delete
+    description: Delete a file
+    parameters:
+      type: object
+      properties:
+        path:
+          type: string
+          description: Path of the file to delete
+      required: [path]
+      examples:
+        - {file_delete: {path: "temp.txt"}}
+
+  - name: file_move
+    description: Move or rename a file
+    parameters:
+      type: object
+      properties:
+        source:
+          type: string
+          description: Source file path
+        destination:
+          type: string
+          description: Destination file path
+      required: [source, destination]
+      examples:
+        - {file_move: {source: "old.txt", destination: "new.txt"}}
+        - {file_move: {source: "file.txt", destination: "backup/file.txt"}}
+
 implementation:
   module: aim.tool.impl.file_ops
   class: FileOperationsImplementation 
