--- a/config/tools/system.yaml
+++ b/config/tools/system.yaml
@@ -1,31 +1,5 @@
 type: system
 functions:
-  - name: system_process_info
-    description: Get information about running processes
-    parameters:
-      type: object
-      properties:
-        pid:
-          type: integer
-          description: Process ID to get info for (optional, if not provided returns all processes)
-        format:
-          type: string
-          description: Output format
-          enum: [short, full]
-          default: short
-      examples:
-        - {system_process_info: {pid: 1234}}
-        - {system_process_info: {format: full}}
-
-  - name: system_env_var
-    description: Get environment variable value
-    parameters:
-      type: object
-      properties: {}
-      required: []
-      examples:
-        - {system_env_var: {}}
-
   - name: system_run_command
     description: Run a bash command
     parameters:
@@ -42,6 +16,53 @@ functions:
       examples:
         - {system_run_command: {command: "ls -la"}}
         - {system_run_command: {command: "ps aux", working_dir: "/tmp"}}
+
+  - name: system_run_python
+    description: Execute a Python script
+    parameters:
+      type: object
+      properties:
+        code:
+          type: string
+          description: Python code to execute
+        working_dir:
+          type: string
+          description: Working directory for execution
+          default: .
+      required: [code]
+      examples:
+        - {system_run_python: {code: "print('Hello, world!')"}}
+        - {system_run_python: {code: "import os\nprint(os.listdir('.'))"}}
+
+  - name: system_env_var
+    description: Get environment variable values
+    parameters:
+      type: object
+      properties:
+        var_name:
+          type: string
+          description: Specific environment variable to get (optional)
+      examples:
+        - {system_env_var: {var_name: "PATH"}}
+        - {system_env_var: {}}
+
+  - name: system_get_datetime
+    description: Get current date and time information
+    parameters:
+      type: object
+      properties:
+        format:
+          type: string
+          description: Output format (iso, readable, unix)
+          enum: [iso, readable, unix]
+          default: readable
+        timezone:
+          type: string
+          description: Timezone (default is system timezone)
+      examples:
+        - {system_get_datetime: {format: "readable"}}
+        - {system_get_datetime: {format: "iso", timezone: "UTC"}}
+
 implementation:
   module: aim.tool.impl.system
   class: SystemImplementation 
