--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "pyyaml",
     "psutil",
     "torchvision",
+    "tiktoken (>=0.12.0,<0.13.0)",
 ]
 
 [project.optional-dependencies]
